Tweak index.html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <img src="images/google-logo.png" alt="Google Logo">
             </div>
             <div class="search-bar">
-                <img src="images/magnifying-glass.png">
+                <img id="magnifying-glass" src="images/magnifying-glass.png">
                 <input type="text">
-                <img src="images/microphone.png">
+                <img id="microphone" src="images/microphone.png">
             </div>
             <div class="search-buttons">
                 <button type="button" class="search-button">Google Search</button>
