--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="logo">
-                <img src="images/google-logo.png" alt="Google Logo">
+                <img id="logo" src="images/google-logo.png" alt="Google Logo">
             </div>
             <div class="search-bar">
                 <img id="magnifying-glass" src="images/magnifying-glass.png">
